finalize  footer styling

--- a/index.html
+++ b/index.html
@@ -2096,9 +2096,9 @@
       data-gtm-action="Footer_Link"
     > -->
     <footer class="page-footer container-fluid">
-      <div class="d-flex flex-column ">
+      <div class="d-flex flex-column justify-content-md-between  flex-md-row"    >
 
-        <div class="flex-sm ai-fe">
+        <div class="d-flex flex-column  flex-md-row  align-items-md-center">
           <a class="brand" href="#">
             <svg
               version="1.1"
@@ -2123,40 +2123,53 @@
         </div>
 
         <!-- social icons -->
-        <ul class="social flex-xs ai-fe">
+        <ul class="social d-flex align-items-center">
           <li>
             <a
-              class="genericon genericon-facebook"
+              class="genericon "
               href="#"
               target="_blank"
-            ></a>
+            >
+            <i class="fab fa-facebook-square"></i>
+        </a>
           </li>
           <li>
-            <a class="genericon genericon-twitter" href="#" target="_blank"></a>
-          </li>
-          <li>
-            <a
-              class="genericon genericon-instagram"
-              href="#"
-              target="_blank"
-            ></a>
-          </li>
-          <li>
-            <a class="genericon genericon-tumblr" href="#" target="_blank"></a>
+            <a class="genericon " href="#" target="_blank">
+
+                <i class="fab fa-twitter">
+
+                </i>
+            </a>
           </li>
           <li>
             <a
-              class="genericon genericon-linkedin"
+              class="genericon"
               href="#"
               target="_blank"
-            ></a>
+            >
+            <i class="fab fa-instagram"></i>
+        </a>
+          </li>
+          <li>
+            <a class="genericon " href="#" target="_blank">
+                <i class="fab fa-tumblr"></i>
+            </a>
+          </li>
+          <li>
+            <a
+              class="genericon "
+              href="#"
+              target="_blank"
+            >
+            <i class="fab fa-linkedin-in"></i></a>
           </li>
         </ul>
       </div>
-      <div class="footer-links">
-        <div class="footer-links-edition flex-xs">
+      <div class="footer-links d-flex flex-wrap ">
+
+        <div class="footer-links-edition d-flex">
           <label style="margin-top:6px;margin-right:15px">
-            <strong>Editions:</strong>
+            <strong class="font-weight-bold">Editions:</strong>
           </label>
 
           <!-- footer navigation links -->
