fix linter and stylint errors

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div
       class="d-flex justify-content-between  align-items-center align-items-lg-end align-items-xl-end nav-top-container"
     >
-      <date class="d-none d-lg-block d-xl-block">Mon, Jan 20, 2020</date>
+      <p class="nav-date  d-none d-lg-block d-xl-block">Mon, Jan 20, 2020</p>
       <div>
         <a class="brand" href="#">
           <svg
@@ -45,12 +45,11 @@
       </div>
       <div class="d-flex align-items-center">
         <div class="signin-sub-container ">
-          <a id="auth" class="nav-sign-in" href="#">Sign In</a>
-          <a id="auth" class="nav-subscribe" href="#"
+          <a  class="nav-sign-in" href="#">Sign In</a>
+          <a  class="nav-subscribe" href="#"
             >Subscribe
             <svg
               version="1.1"
-              id="Layer_1"
               xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink"
               x="0px"
@@ -1220,7 +1219,6 @@
             <div class="card rounded-0 mb-4 ">
               <div class="card-image position-relative">
                 <img class="card-img-top image-fluid rounded-0 "
-                background-image: url("");
                 src="https://d.newsweek.com/en/full/1547935/canadian-college-italy-v2.jpg?w=343&h=229&l=0&t=0&f=794b9dc860eab72a611ab3422a24fc8c"
                 alt="Card image cap" />
                 <div class="category position-absolute text-uppercase ">
@@ -1543,10 +1541,10 @@
                     CBS' 'Tell Me a Story'</a
                   >
                 </h3>
-                <summary
+                <p
                   >"I try my best not to drink the Kool-Aid too much, because
                   that can be a slippery slope," Paul Wesley said about dealing
-                  with fame.</summary
+                  with fame.</p
                 >
                 <time class="summery-time pt-2 d-block">20:00</time>
               </div>
@@ -2031,11 +2029,13 @@
               <div class="fn    image ">
                 <div class="mag-thumb prev">
                   <img
+                  alt="some description"
                     src="https://d.newsweek.com/en/full/1556038/january-03-17-2020-cover.jpg?w=170&amp;q=95&amp;f=5ee630dad7d5beb00d233b14fbde0b1a"
                   />
                 </div>
                 <div class="mag-thumb current">
                   <img
+                  alt="some alt text"
                     src="https://d.newsweek.com/en/full/1560513/january-24-31-2020-cover.jpg?w=170&amp;q=95&amp;f=e37a347d93374c1cd0542ffe614ab3b4"
                   />
                 </div>
@@ -2102,7 +2102,6 @@
           <a class="brand" href="#">
             <svg
               version="1.1"
-              id="Layer_1"
               xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink"
               x="0px"
