add latest news section

--- a/index.html
+++ b/index.html
@@ -962,7 +962,7 @@
 
           <div class="latest-news-container">
             <div class="block-title">
-              opinions
+            Latest News
             </div>
 
             <!-- latest news item -->
